--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/SOFTGAMES.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/SOFTGAMES.data.br",
-        frameworkUrl: buildUrl + "/SOFTGAMES.framework.js.br",
-        codeUrl: buildUrl + "/SOFTGAMES.wasm.br",
+        dataUrl: buildUrl + "/SOFTGAMES.data",
+        frameworkUrl: buildUrl + "/SOFTGAMES.framework.js",
+        codeUrl: buildUrl + "/SOFTGAMES.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "InterviewTest",
